--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=backend
+spring.datasource.url=jdbc:postgresql://${DATABASE_URL:localhost}:5432/backend
+spring.datasource.username=admin
+spring.datasource.password=secret
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
