--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,27 +1,27 @@
 version: '3.1'
 services:
-  frontend:
-    image: frontend:0.1 
+  todo-frontend:
+    image: cagritasci/hsr_distributedsystems_24_todo_frontend:0.1 
     ports:
       - "8081:8081"
     networks:
       - todo-network
     environment:
-      - BACKEND_URL=backend
+      - BACKEND_URL=todo-backend
 
   todo-backend:
-    image: backend:0.1 
+    image: cagritasci/hsr_distributedsystems_24_todo_backend:0.1 
     ports:
       - "8080:8080"
     networks:
       - todo-network
     depends_on:
-      - database
+      - todo-database
     environment:
-      - DATABASE_URL=database
+      - DATABASE_URL=todo-database
 
   todo-database:
-    image: database:0.1 
+    image: cagritasci/hsr_distributedsystems_24_todo_database:0.1 
     ports:
       - "5432:5432"
     networks:
